--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -11,4 +11,10 @@
 .dettagli{
 	background: #f5f5f5;
 }
+.isDisabled {
+  color: currentColor;
+  cursor: not-allowed;
+  opacity: 0.5;
+  text-decoration: none;
+}
 
